--- a/web/cuckoo/web/clientsrc/sass/_form.sass
+++ b/web/cuckoo/web/clientsrc/sass/_form.sass
@@ -174,6 +174,11 @@
     &:hover
       cursor: pointer
 
+    +dark-mode
+      border-color: $border-dark
+      background-color: $dark
+      color: $white
+
   .control:first-child label
     border-top-left-radius: $radius
     border-bottom-left-radius: $radius
