--- a/web/cuckoo/web/clientsrc/sass/_var.sass
+++ b/web/cuckoo/web/clientsrc/sass/_var.sass
@@ -32,7 +32,7 @@ $code-dark-text: $light-matte
 
 // dimensional constants
 $gap: 0.75rem
-$radius: .2rem
+$radius: .4rem
 
 $navbar-height: 3.5625rem
 $footer-height: 10rem
